--- a/wp-content/themes/tns-child/assets/src/scss/_variables.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $blue: #0073e5;
 $lighter-grey: #eee;
 $lightest-grey: #f5f5f5;
 $white: #fff;
-
+$ground-yellow: #C89F63;
 // Base Fonts
 $base-font: "Source Sans Pro", sans-serif;
 
