[Component] upload phần header và phần welcome, footer

--- a/wp-content/themes/tns-child/assets/src/css/style.scss
+++ b/wp-content/themes/tns-child/assets/src/css/style.scss
@@ -8,3 +8,5 @@
 // Layout & components
 @import "../scss/header";
 @import "../scss/woocommerce";
+@import "../scss/welcome";
+@import "../scss/footer";
