[Component] upload phần header và phần welcome, footer

--- a/wp-content/themes/tns-child/assets/src/scss/_welcome.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_welcome.scss
@@ -4,7 +4,7 @@
 }
 .welcome-title {
     h5 {
-        color: $ground-yellow;
+        color: $primary;
         font-family: "Be Vietnam Pro";
         font-size: 15px;
         font-style: normal;
@@ -64,7 +64,7 @@
 }
 .welcome-link {
     a {
-        color: $ground-yellow;
+        color: $primary;
         font-family: Be Vietnam Pro;
         font-size: 20px;
         font-style: normal;
