--- a/wp-content/themes/tns-child/assets/src/scss/_variables.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_variables.scss
@@ -7,7 +7,8 @@ $blue: #0073e5;
 $lighter-grey: #eee;
 $lightest-grey: #f5f5f5;
 $white: #fff;
-$ground-yellow: #C89F63;
+$primary: #C89F63;
+
 // Base Fonts
 $base-font: "Source Sans Pro", sans-serif;
 
@@ -57,5 +58,5 @@ $link--font-color-hover: $dark-grey;
 $site-title__link--font-color: $dark-grey;
 
 // Background colors
-$body--background-color: $white;
+$body--background-color: #1B1412;
 $mark--background-color: $light-grey;
