[Component] upload phần home service

--- a/wp-content/themes/tns-child/assets/src/css/style.scss
+++ b/wp-content/themes/tns-child/assets/src/css/style.scss
@@ -10,3 +10,5 @@
 @import "../scss/woocommerce";
 @import "../scss/welcome";
 @import "../scss/footer";
+@import "../scss/home-service";
+@import "../scss/home-service-2";
