--- a/wp-content/themes/tns-child/assets/src/scss/_header.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_header.scss
@@ -73,8 +73,7 @@
 	.primary-menu {
 		a {
 			padding: 20px;
-			color: white;
-			opacity: 0.5;
+			color: gray;
 			font-size: 15px;
 		}
 
@@ -105,7 +104,7 @@
 			}
 
 			> a {
-				color: #FFF;
+				color: gray;
 				font-size: 16px;
 			}
 
