--- a/wp-content/themes/tns-child/assets/src/scss/_products.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_products.scss
@@ -40,11 +40,11 @@
   text-align: center;
 }
 
-.image-product {
+.image-cover {
   box-shadow: 4px 5px 4px 0px #E1E2E6;
 }
 
-.image-product:hover{
+.image-cover:hover{
   box-shadow: none;
   border: 1px solid #805346;
   transition: 0.3 ease-in-out;
@@ -55,6 +55,7 @@
   font-weight: bolder;
   padding-top: 1rem;
   font-size: 18px;
+  color: black;
 }
 
 .price-product{
