Update- Service Trang chủ

--- a/wp-content/themes/tns-child/assets/src/scss/_service.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_service.scss
@@ -33,7 +33,7 @@
             .service-item__img {
                 img {
                     width: 100%;
-                    height: 100%;
+                   height: 506px;
                     object-fit: cover;
                 }
             }
@@ -192,7 +192,6 @@
                 font-size: 34px;
             }
         }
-
         .service-slider {
             margin-top: 63px;
            
@@ -229,9 +228,5 @@
             }
            
         }
-    
-       
-    
-       
     }
 }
