--- a/wp-content/themes/tns-child/assets/src/scss/_details-service.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_details-service.scss
@@ -112,7 +112,7 @@
   
     .service-details__slider {
         margin-top: 63px;
-      
+        
             .slick-slide {
                 margin: 0 30px;
             }
@@ -142,7 +142,7 @@
             .service-item__img {
                 img {
                     width: 100%;
-                    height: 100%;
+                    height: 506px;
                     object-fit: cover;
                 }
             }
