update-details service

--- a/wp-content/themes/tns-child/assets/src/scss/_details-service.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_details-service.scss
@@ -220,7 +220,7 @@
                 .service-item__img {
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: 328px;
                         object-fit: cover;
                     }
                 }
@@ -253,7 +253,7 @@
                 .service-item__img {
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: 800px;
                         object-fit: cover;
                     }
                 }
@@ -302,7 +302,7 @@
                 .service-item__img {
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: 371px;
                         object-fit: cover;
                     }
                 }
