--- a/wp-content/themes/tns-child/assets/src/scss/_service.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_service.scss
@@ -113,7 +113,7 @@
                 .service-item__img {
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: 328px;
                         object-fit: cover;
                     }
                 }
@@ -150,7 +150,7 @@
                 .service-item__img {
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: 800px;
                         object-fit: cover;
                     }
                 }
@@ -199,7 +199,7 @@
                 .service-item__img {
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: 371px;
                         object-fit: cover;
                     }
                 }
