[Data] Add Data For All

--- a/wp-content/themes/tns-child/assets/src/css/style.scss
+++ b/wp-content/themes/tns-child/assets/src/css/style.scss
@@ -14,3 +14,10 @@
 @import "../scss/home-service-2";
 @import "../scss/home-product";
 @import "../scss/gallery";
+@import "../scss/service";
+@import "../scss/page-header-wrapper";
+@import "../scss/details-service";
+@import "../scss/archive-product";
+@import "../scss/pagination";
+@import "../scss/blog";
+@import "../scss/product-single";
