--- a/wp-content/themes/tns-child/assets/src/scss/_footer.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_footer.scss
@@ -7,7 +7,7 @@
     background-size: contain;
   }
 
-  .col-md-2, .col-md-3 {
+  .col-md-1, .col-md-2, .col-md-3 {
     .title {
       font-size: 20px;
       font-weight: bold;
