--- a/wp-content/themes/tns-child/assets/src/scss/_home-service-2.scss
+++ b/wp-content/themes/tns-child/assets/src/scss/_home-service-2.scss
@@ -33,7 +33,7 @@
       .service-item__img {
         img {
           width: 100%;
-          height: 100%;
+          height: 506px;
           object-fit: cover;
         }
       }
@@ -113,7 +113,7 @@
         .service-item__img {
           img {
             width: 100%;
-            height: 100%;
+            height: 328px;
             object-fit: cover;
           }
         }
@@ -150,7 +150,7 @@
         .service-item__img {
           img {
             width: 100%;
-            height: 100%;
+            height: 800px;
             object-fit: cover;
           }
         }
@@ -192,7 +192,6 @@
         font-size: 34px;
       }
     }
-
     .service-slider {
       margin-top: 63px;
 
@@ -200,7 +199,7 @@
         .service-item__img {
           img {
             width: 100%;
-            height: 100%;
+            height: 371px;
             object-fit: cover;
           }
         }
@@ -227,6 +226,7 @@
           }
         }
       }
+
     }
   }
 }
